--- a/templates/marathon.sh.erb
+++ b/templates/marathon.sh.erb
@@ -1,8 +1,27 @@
-[Unit]
-Description=Marathon
-After=network.target
-Wants=network.target
+#!/bin/sh
+#
+# marathon 
+#
+# chkconfig:   <default runlevel(s)> <start> <stop>
+# description: <description, split multiple lines with \
+#              a backslash>
 
+### BEGIN INIT INFO
+# Provides: marathon
+# Required-Start: $local_fs $network
+# Required-Stop: $local_fs $network
+# Should-Start: 
+# Should-Stop: 
+# Default-Start: 2 3 4 5
+# Default-Stop: 0 1 6
+# Short-Description: Startup the Marathon framework
+# Description: Mesos is a Marathon framework to manage docker
+### END INIT INFO
+
+# Source function library.
+. /etc/rc.d/init.d/functions
+
+exec="<%= @install_dir %>/bin/start"
 <% @values = { 'marathon::marathon_assets_path' => scope['marathon::marathon_assets_path'],
                'marathon::marathon_checkpoint' =>  scope['marathon::marathon_checkpoint'],
                'marathon::marathon_event_subscribe' => scope['marathon::marathon_event_subscriber'],
@@ -30,15 +49,88 @@ Wants=network.target
                'marathon::marathon_zk_state' => scope['marathon::marathon_zk_state'],
                'marathon::marathon_zk_timeout' => scope['marathon::marathon_zk_timeout'],
              } -%>
-[Service]
-ExecStart=<%= @install_dir %>/bin/start <% @values.each do |key,val| -%>
+args="<% @values.each do |key,val| -%>
 <% if val != :undef -%>
  --<% arg = key.sub ('marathon::marathon_', '') -%><%= arg -%> <%= val -%>
 <% end -%>
-<% end -%>
-Restart=on-abort
-Restart=always
-RestartSec=20
+<% end -%>"
 
-[Install]
-WantedBy=multi-user.target
+prog="marathon"
+
+[ -e /etc/sysconfig/$prog ] && . /etc/sysconfig/$prog
+
+lockfile=/var/lock/subsys/$prog
+
+start() {
+    [ -x $exec ] || exit 5
+    echo -n $"Starting $prog: "
+    daemon $exec $args
+    retval=$?
+    echo
+    [ $retval -eq 0 ] && touch $lockfile
+    return $retval
+}
+
+stop() {
+    echo -n $"Stopping $prog: "
+    # stop it here, often "killproc $prog"
+    retval=$?
+    echo
+    [ $retval -eq 0 ] && rm -f $lockfile
+    return $retval
+}
+
+restart() {
+    stop
+    start
+}
+
+reload() {
+    restart
+}
+
+force_reload() {
+    restart
+}
+
+rh_status() {
+    # run checks to determine if the service is running or use generic status
+    status $prog
+}
+
+rh_status_q() {
+    rh_status >/dev/null 2>&1
+}
+
+
+case "$1" in
+    start)
+        rh_status_q && exit 0
+        $1
+        ;;
+    stop)
+        rh_status_q || exit 0
+        $1
+        ;;
+    restart)
+        $1
+        ;;
+    reload)
+        rh_status_q || exit 7
+        $1
+        ;;
+    force-reload)
+        force_reload
+        ;;
+    status)
+        rh_status
+        ;;
+    condrestart|try-restart)
+        rh_status_q || exit 0
+        restart
+        ;;
+    *)
+        echo $"Usage: $0 {start|stop|status|restart|condrestart|try-restart|reload|force-reload}"
+        exit 2
+esac
+exit $?
