make copatible with chkconfig

--- a/templates/marathon.sh.erb
+++ b/templates/marathon.sh.erb
@@ -2,9 +2,8 @@
 #
 # marathon 
 #
-# chkconfig:   <default runlevel(s)> <start> <stop>
-# description: <description, split multiple lines with \
-#              a backslash>
+# chkconfig:   2345 55 25
+# description: marathon for mesos
 
 ### BEGIN INIT INFO
 # Provides: marathon
