--- a/templates/marathon.sysv.erb
+++ b/templates/marathon.sysv.erb
@@ -20,85 +20,55 @@
 # Source function library.
 . /etc/rc.d/init.d/functions
 
-exec="/usr/local/bin/marathon"
-args="--master <%= scope.lookupvar('marathon::master') %> --zk <%= scope.lookupvar('marathon::zk') <%= scope.lookupvar('marathon::extra_options') %>"
-
 prog="marathon"
-
-[ -e /etc/sysconfig/$prog ] && . /etc/sysconfig/$prog
-
+cmd="/usr/local/bin/${prog}"
+args="--master <%= scope.lookupvar('marathon::master') %> --zk <%= scope.lookupvar('marathon::zk') %> <%= scope.lookupvar('marathon::extra_options') %>"
+pidfile="/var/run/${prog}"
 lockfile=/var/lock/subsys/$prog
 
+[[ -f /etc/sysconfig/$prog ]] && . /etc/sysconfig/$prog
+
 start() {
-    [ -x $exec ] || exit 5
-    echo -n $"Starting $prog: "
-    daemon $exec $args
-    retval=$?
-    echo
-    [ $retval -eq 0 ] && touch $lockfile
-    return $retval
+  echo -n $"Starting $prog: "
+  daemon --pidfile=$pidfile "${cmd} ${args} >> /dev/null &"
+  retval=$?
+  ps -ef | grep -F "${cmd}" | grep -v 'grep' | awk '{print $2}' > ${pidfile}
+  [ $retval -eq 0 ] && touch $lockfile && success
+  echo
+  return $retval
 }
 
 stop() {
-    echo -n $"Stopping $prog: "
-    # stop it here, often "killproc $prog"
-    retval=$?
-    echo
-    [ $retval -eq 0 ] && rm -f $lockfile
-    return $retval
+  echo -n $"Stopping $prog: "
+  killproc -p $pidfile $prog
+  retval=$?
+  echo
+  [ $retval -eq 0 ] && rm -f $lockfile
+  return $retval
 }
 
 restart() {
-    stop
-    start
+  stop
+  start
 }
-
-reload() {
-    restart
-}
-
-force_reload() {
-    restart
-}
-
-rh_status() {
-    # run checks to determine if the service is running or use generic status
-    status $prog
-}
-
-rh_status_q() {
-    rh_status >/dev/null 2>&1
-}
-
 
 case "$1" in
-    start)
-        rh_status_q && exit 0
-        $1
-        ;;
-    stop)
-        rh_status_q || exit 0
-        $1
-        ;;
-    restart)
-        $1
-        ;;
-    reload)
-        rh_status_q || exit 7
-        $1
-        ;;
-    force-reload)
-        force_reload
-        ;;
-    status)
-        rh_status
-        ;;
-    condrestart|try-restart)
-        rh_status_q || exit 0
-        restart
-        ;;
-    *)
-        echo $"Usage: $0 {start|stop|status|restart|condrestart|try-restart|reload|force-reload}"
-        exit 2
+  start)
+     $1
+     ;;
+  stop)
+     $1
+     ;;
+  restart)
+     $1
+     ;;
+  status)
+     echo -n "$prog"
+     status -p $pidfile
+     exit $?
+     ;;
+  *)
+     echo $"Usage: $0 {start|stop|status|restart}"
+     exit 2
 esac
-exit $?
+exit 0
