Add the ability to run the marathon service as a non privileged user

--- a/templates/marathon.systemd.erb
+++ b/templates/marathon.systemd.erb
@@ -8,6 +8,7 @@ ExecStart=<%= scope.lookupvar('marathon::bin_path') %>/marathon --master <%= sco
 Restart=on-abort
 Restart=always
 RestartSec=20
+User=<%= scope.lookupvar('marathon::user') %>
 
 [Install]
 WantedBy=multi-user.target
