--- a/templates/marathon.upstart.erb
+++ b/templates/marathon.upstart.erb
@@ -6,4 +6,16 @@ stop on runlevel [!2345]
 respawn
 respawn limit 10 5
 
-exec su -c '<%= scope.lookupvar('marathon::bin_path') %>/marathon --master <%= scope.lookupvar('marathon::master') %> --zk <%= scope.lookupvar('marathon::zk') %> <%= scope.lookupvar('marathon::extra_options') %>' - <%= scope.lookupvar('marathon::user') %>
+setuid <%= scope.lookupvar('marathon::user') %>
+
+exec <%= scope.lookupvar('marathon::bin_path') %>/marathon \
+--master <%= scope.lookupvar('marathon::master') %> \
+--zk <%= scope.lookupvar('marathon::zk') %> \
+<%- if scope.lookupvar('marathon::authenticate') -%>
+    --mesos_authentication_principal <%= scope.lookupvar('marathon::auth_principal') %> \
+    --mesos_authentication_secret_file <%= scope.lookupvar('marathon::secret_file') %> \
+    <%- if scope.lookupvar('marathon::auth_role') -%>
+        --mesos_role <%= scope.lookupvar('marathon::auth_role') %> \
+    <% end -%>
+<% end -%>
+<%= scope.lookupvar('marathon::extra_options') %>
