--- a/templates/marathon.upstart.erb
+++ b/templates/marathon.upstart.erb
@@ -6,4 +6,4 @@ stop on runlevel [!2345]
 respawn
 respawn limit 10 5
 
-exec su -c '<%= scope.lookupvar('marathon::bin_path') %>/marathon --master <%= scope.lookupvar('marathon::master') %> --zk <%= scope.lookupvar('marathon::zk') %> <%= scope.lookupvar('marathon::extra_options') %>' - <%= scope.lookupvar('marathon::user') %>
+exec su -c '<%= scope.lookupvar('marathon::bin_path') %>/marathon --master <%= @master_url %> --zk <%= @zk_url %> <%= scope.lookupvar('marathon::extra_options') %>' - <%= scope.lookupvar('marathon::user') %>
